# notionsync

./: .env.template  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: .env.template  database.db  main.py  pyproject.toml
src/app/: config.py  crud.py  db.py  middleware.py  models.py  routes.py  schemas.py
src/app/config/: config.py
src/app/db/: db.py
src/app/repository/crud/: page.py
src/app/routes/: __init__.py  page.py
src/app/schema/: page.py  schema.py
src/auth/: auth.py  dependencies.py  models.py  schemas.py  utils.py
src/migrations/: env.py
src/migrations/versions/: 5aeade1a752c_initial_migration.py  650b0ff5a21b_init_migrate.py
