[tool.poetry]
name = "notionsync"
version = "0.1.0"
description = "NotionSync is a FastAPI-based service that provides JWT authentication (access/refresh tokens) and integrates seamlessly with Notion for managing pages (create, edit, delete, and fetch with pagination)."
authors = ["Dauren <skaparadr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
jose = "^1.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.12"
bcrypt = "^4.2.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
